# cite-faithfulness

./: .gitignore  CHANGELOG.md  DATASET.md  Makefile  PAPER.md  README.md  pyproject.toml
.github/workflows/: ci.yml
citeval/: __init__.py  client.py  demo.py  label_sheet.py  metrics.py  nli.py  plots.py  report.py  rescore.py  run_faithfulness.py  stats.py  threshold.py  verifier.py  verify_eval.py
data/: questions.jsonl
runs/: REPORT.md  THRESHOLD_REPORT.md  VERIFIER_REPORT.md
runs/dense-3b/: results.jsonl  summary.json  verifier_scores.json
runs/dense-8b/: results.jsonl  summary.json  verifier_scores.json
runs/hybrid+rerank-3b/: results.jsonl  summary.json  verifier_scores.json
runs/hybrid+rerank-8b/: results.jsonl  summary.json  verifier_scores.json
runs/hybrid-3b/: results.jsonl  summary.json  verifier_scores.json
runs/hybrid-8b/: results.jsonl  summary.json  verifier_scores.json
runs/rerank-3b/: results.jsonl  summary.json  verifier_scores.json
runs/rerank-8b/: results.jsonl  summary.json  verifier_scores.json
scripts/: run_sweep.ps1
tests/: test_demo.py  test_metrics.py  test_nli.py  test_report.py  test_rescore.py  test_stats.py  test_threshold.py  test_verifier.py
