[project]
name = "cite-faithfulness"
version = "0.1.0"
description = "NLI-based citation faithfulness evaluation for citation-grounded RAG (an ALCE reproduction, applied to PaperPal)"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Drives the PaperPal backend over its /query SSE API.
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# The real NLI judge. Heavy (torch); kept optional so the metric unit tests
# and CI run without it. Install with:  pip install -e ".[nli]"
nli = [
    "sentence-transformers>=3.3.0",
    "torch>=2.2.0",
    "numpy>=1.26.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]
# Error-bar figures for the controlled study. Optional — the report tables and
# all statistics work without it (matplotlib only renders the PNGs).
viz = [
    "matplotlib>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["citeval"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
